# jlpt_learning_app

./: .gitignore  README.md  pyproject.toml
jlpt_learning_app/: app.py
jlpt_learning_app/app/: main.py  utils.py
jlpt_learning_app/app/data/: jlpt_n3_words.csv
tests/: test_jp_model.py
